Added analizyng phase

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="index-style.css">
 </head>
 <body>
+    <p id="password"></p>
 
     <!-- Script  -->
     <script src="./js/index.js"></script>
